sumo/tests/od2trips/errors/vm/testsuite.od2trips

# The vehicle type is missing (based import/vmr/100vehs_hour) 
vm_no_vehicle_type


# The begin time is larger than the end time
vm_time_begin_larger

# begin time not numeric
vm_time_begin_false

# end time not numeric
vm_time_end_false

# one time is missing
vm_time_one_missing


# One district too much in the data
vm_one_district_too_much

# One district too less in the data
vm_one_district_missing

# first amount in first district not numeric
vm_false11

# second amount in first district not numeric
vm_false12


# first amount in second district not numeric
vm_false21

# second amount in second district not numeric
vm_false22


# factor not numeric
vm_factor_false

# factor missing
vm_factor_missing


